# GOHI_ROBOT

0bringup/launch/: flat_cage.sh
Documentation/: usbport.sh
base_simple_controller/: CMakeLists.txt  package.xml
base_simple_controller/src/: base_simple_controller.cpp
bms_battery/gohi_hw_bms/: CMakeLists.txt
dtu/gohi_hw_rev/: CMakeLists.txt  config.txt  package.xml
dtu/gohi_hw_rev_msgs/: CMakeLists.txt
flat_car/flat_car_msgs/: CMakeLists.txt
flat_car/gohi_hw_flat_car/: CMakeLists.txt
gohi_hw_flat_car/: CMakeLists.txt  config.txt  package.xml
gohi_hw_flat_car/config/: config.yaml
gohi_hw_flat_car/launch/: gohi_hw_flat_car.launch
gohi_hw_flat_car/src/: HIGO_AP.cpp  HIGO_ROS.cpp  main.cpp
gohi_hw_power_car/: CMakeLists.txt  package.xml
gohi_hw_power_car/config/: config.yaml
gohi_hw_power_car/launch/: gohi_hw_power_car.launch
gohi_hw_power_car/src/: HIGO_ROS.cpp  main.cpp
gohi_hw_rev/: CMakeLists.txt  package.xml
gohi_hw_rev/launch/: gohi_hw.launch
gohi_hw_rev/src/: HIGO_AP.cpp  HIGO_ROS.cpp  main.cpp
gohi_hw_sensor/: CMakeLists.txt  config.txt  package.xml
gohi_hw_sensor/config/: config.yaml
gohi_hw_sensor/include/gohi_hw/: HIGO_AP.h  HIGO_ROS.h  crc.h
gohi_hw_sensor/include/sdk/hf_link/: hf_link_modbus.cpp  hf_link_modbus.h  hf_link_state_machine_modbus.cpp  hf_link_state_machine_modbus.h
gohi_hw_sensor/include/sdk/robot_abstract/: aisikong_parameters.h  robot_abstract.h
gohi_hw_sensor/launch/: gohi_hw.launch
gohi_hw_sensor/msg/: Puncture.msg
gohi_hw_sensor/src/: HIGO_AP.cpp  HIGO_ROS.cpp  crc.cpp  listener.cpp  main.cpp  serial_example.cpp  talker.cpp
gohi_hw_stair_car/: CMakeLists.txt  package.xml
gohi_hw_stair_car/config/: config.yaml
gohi_hw_stair_car/launch/: gohi_hw_stair_car.launch
gohi_hw_stair_car/src/: HIGO_AP.cpp  HIGO_ROS.cpp  main.cpp
gohi_msgs/: CMakeLists.txt  package.xml
(+199 files in other folders)
